--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-n  "version": "1.0.0",
+  "version": "1.0.0",
   "description": "Desafio da Cadastra para novos colaboradores",
-  "main": "index.js",
-  "scripts": {
-    "start": "node_modules/.bin/cross-env SERVER_API=http://localhost:5000 npm-run-all --parallel dev server",
-    "start:gp": "npm-run-all --parallel dev server",
-    "dev": "gulp",
-    "server": "json-server ./db.json --port 5000"
-  },
+  "private": true,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Cadastra-Next-Gen-Company/desenvolvedor-cadastra"
@@ -18,21 +13,30 @@ n  "version": "1.0.0",
     "url": "https://github.com/Cadastra-Next-Gen-Company/desenvolvedor-cadastra/issues"
   },
   "homepage": "https://github.com/Cadastra-Next-Gen-Company/desenvolvedor-cadastra#readme",
-  "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.43.4",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
-    "webpack": "^5.62.1"
+  "scripts": {
+    "dev": "vite --port 3000",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "server": "json-server ./db.json --port 5000",
+    "start": "npm-run-all --parallel dev server"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "npm-run-all": "^4.1.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
