--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "start": "npm-run-all --parallel dev server"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
