--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "start": "npm-run-all --parallel dev server"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@types/styled-components": "^5.1.34",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
