--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.8",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
